--- a/src/main/resources/Templates/School/StudyRecord/addFormStudyRecord.html
+++ b/src/main/resources/Templates/School/StudyRecord/addFormStudyRecord.html
@@ -108,7 +108,7 @@
 </div>
 <div>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-    <a class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord List Manage</a>
+    <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER', 'TEACHER')" class="btn btn-primary" th:href="@{/m-study/showManageStudyRecord}">StudyRecord List Manage</a>
 </div>
 </body>
 <script src="/JavaScript/function.js"></script>
