--- a/src/main/resources/Templates/Parent/addParentForm.html
+++ b/src/main/resources/Templates/Parent/addParentForm.html
@@ -15,6 +15,9 @@
                 <div th:if="${Error}" class="alert alert-danger">
                     <span th:text="${Error}"></span>
                 </div>
+                <div th:if="${success}" class="alert alert-success">
+                    <span th:text="${success}"></span>
+                </div>
                 <h3>Add Parent</h3>
                 <!-- START Fragment/UsernamePassword-->
                 <div th:replace="~{Fragment/UsernamePassword :: fragmentUsernamePassword}"></div>
@@ -29,11 +32,8 @@
             </form>
         </div>
     </div>
-    <div th:if="${success}" class="alert alert-success">
-        <span th:text="${success}"></span>
-    </div>
     <div>
-        <a class="btn btn-primary" th:href="@{/m-parent/showManageParent}">Return ListParent</a>
+        <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER','TEACHER')" class="btn btn-primary" th:href="@{/m-parent/showManageParent}">Return ListParent</a>
     </div>
     <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
 </div>
