--- a/src/main/resources/Templates/School/Classes/formModifyClass.html
+++ b/src/main/resources/Templates/School/Classes/formModifyClass.html
@@ -79,7 +79,7 @@
 </div>
 <div>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-    <a class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class List Manage</a>
+    <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="btn btn-primary" th:href="@{/m-class/showManageClass}">Class List Manage</a>
 </div>
 </body>
 <script src="/JavaScript/views/classes/add-modify.js"></script>
