--- a/src/main/resources/Templates/School/NoteBook/DetailNoteBook/addFormDetailNote.html
+++ b/src/main/resources/Templates/School/NoteBook/DetailNoteBook/addFormDetailNote.html
@@ -6,96 +6,33 @@
     <link href="/CSS/bootstrap-5.3.3-dist/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="/CSS/main.css" rel="stylesheet" type="text/css">
 </head>
-
 <body>
-<h1>Add new Detail NoteBook</h1>
-<div>
-    <form th:action="@{/m-note-detail/add-process}" th:object="${noteDetail}" method="post">
+<div class="container">
+    <h1>Add new Detail NoteBook</h1>
+    <form th:action="@{/m-note-detail/add-process}" th:object="${noteDetail}" class="form-group" method="post">
         <div id="autoHide">
             <div th:if="${Error}" class="alert alert-danger">
                 <span th:text="${Error}"></span>
             </div>
-            <div th:if="${success}">
-                <h3>You created a new notebook "<span th:text="${success}"></span>"</h3>
+            <div th:if="${success}" class="alert alert-danger">
+                <span th:text="${success}"></span>
             </div>
         </div>
-        <div>
-            <label>Id NoteBook: <span th:text="${noteBook_id}"></span></label>
-            <input type="hidden" th:field="*{noteBook}" th:value="${noteBook_id}">
-        </div>
-
-        <div>
-            <label>Subject: </label>
-            <select th:field="*{subject}" id="subject_select">
-                <option value="0">--Select Subject--</option>
-                <option th:each="subject : ${subjectList}" th:value="${subject.id}" th:text="${subject.nameSubject}"></option>
-            </select>
-            <div th:if="${#fields.hasErrors('subject')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('subject')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label>Teacher: </label>
-            <select th:field="*{teacher}" id="teacher_select">
-                <option value="0">--Select Teacher--</option>
-                <option th:each="teacher : ${teacherList}" th:value="${teacher.id}" th:text="${teacher.lastName} +' '+ ${teacher.firstName}"></option>
-            </select>
-            <div th:if="${#fields.hasErrors('teacher')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('teacher')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label>Teacher comment: </label>
-            <textarea th:field="*{teacherComment}" placeholder="Input Comment of Teacher" name="comment"></textarea>
-            <div th:if="${#fields.hasErrors('teacherComment')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('teacherComment')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-
-        <div>
-            <label>Content Lecture: </label>
-            <input type="text" th:field="*{contentLecture}" placeholder="Input Content lecture" name="comment">
-            <div th:if="${#fields.hasErrors('contentLecture')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('contentLecture')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label>Teaching Hours: </label>
-            <input type="time" th:field="*{time}" placeholder="Input Time Teaching" name="time">
-            <div th:if="${#fields.hasErrors('time')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('time')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
-        <div>
-            <label>Teaching day: </label>
-            <input type="date" th:field="*{teachingDay}" name="teachingDay">
-            <div th:if="${#fields.hasErrors('teachingDay')}">
-                <ul>
-                    <li th:each="error: ${#fields.hasErrors('teachingDay')}" th:text="${error}"></li>
-                </ul>
-            </div>
-        </div>
+<!--        START fragment add modify Note Detail-->
+        <div th:replace="~{Fragment/add_Modify_NoteDetail :: fragAdd-ModifyNoteDetail}"></div>
+<!--        END fragment add modify Note Detail-->
         <div>
             <button class="btn btn-primary" type="submit">Add</button>
         </div>
+        <div>
+            <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
+            <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER', 'TEACHER')" class="btn btn-primary" th:href="@{/m-note-detail/showManageDetailNote(id=${noteDetail.noteBook.id})}">NoteDetail List Manage</a>
+        </div>
     </form>
 </div>
-<div>
-    <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-    <a class="btn btn-primary" th:href="@{/m-note-detail/showManageDetailNote(id=${noteBook_id})}">NoteDetail List Manage</a>
-</div>
 </body>
-<script src="/JavaScript/function.js"></script>
+<script src="/JavaScript/views/hidden.js"></script>
+<script src="/JavaScript/views/noteBook/addDetailNote.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 <script src="/CSS/bootstrap-5.3.3-dist/js/bootstrap.min.js"></script>
