--- a/src/main/resources/Templates/School/NoteBook/addFormNoteBook.html
+++ b/src/main/resources/Templates/School/NoteBook/addFormNoteBook.html
@@ -50,7 +50,7 @@
     </div>
     <div>
         <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-        <a class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook List Manage</a>
+        <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER', 'TEACHER')" class="btn btn-primary" th:href="@{/m-note/showManageNotebook}">NoteBook List Manage</a>
     </div>
 </body>
 <script src="/JavaScript/function.js"></script>
