--- a/src/main/resources/Templates/School/StudyRecord/indexStudyRecord.html
+++ b/src/main/resources/Templates/School/StudyRecord/indexStudyRecord.html
@@ -29,7 +29,7 @@
             <th>Transcript</th>
             <th>Result Conduct</th>
             <th>Teacher Comment</th>
-            <th>Feature</th>
+            <th sec:authorize="hasAnyRole('ADMIN', 'MANAGER', 'TEACHER')">Feature</th>
         </thead>
         <tbody>
             <tr th:each="study,iterStat : ${studyRecordList.content}" th:classappend="${iterStat.index % 2 == 0 ? 'even-row' : 'old-row'}">
@@ -73,7 +73,7 @@
 </div>
 <!--    END pagination-->
 <div>
-    <a class="btn btn-primary" th:href="@{/m-study/showFormAddStudyRecord}">Add New Study-Record</a>
+    <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER', 'TEACHER')" class="btn btn-primary" th:href="@{/m-study/showFormAddStudyRecord}">Add New Study-Record</a>
     <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
 </div>
 </body>
