--- a/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
+++ b/src/main/resources/Templates/School/Subject/ScoreCard/addFormScoreCard.html
@@ -138,7 +138,7 @@
     </form>
     <div>
         <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-        <a class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">ScoreCard List Manage</a>
+        <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER', 'TEACHER')" class="btn btn-primary" th:href="@{/m-score-card/showManageScoreCard}">ScoreCard List Manage</a>
     </div>
 </div>
 </body>
