--- a/src/main/resources/Templates/School/Subject/addFormSubject.html
+++ b/src/main/resources/Templates/School/Subject/addFormSubject.html
@@ -158,7 +158,7 @@
     </div>
     <div>
         <a class="btn btn-primary" th:href="@{/backHomepage}">Return HomePage</a>
-        <a class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject List Manage</a>
+        <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="btn btn-primary" th:href="@{/m-subject/showManageSubject}">Subject List Manage</a>
     </div>
 </body>
 <script src="/JavaScript/function.js"></script>
