--- a/src/main/resources/Templates/Teacher/addTeacher.html
+++ b/src/main/resources/Templates/Teacher/addTeacher.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div>
-        <a class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Return ListTeacher</a>
+        <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Return ListTeacher</a>
         <a class="btn btn-primary" th:href="@{/backHomepage}">Return Home</a>
     </div>
     <p class="mt-5 mb-3 text-body-secondary">© 2017–2024</p>
