--- a/src/main/resources/Templates/Teacher/modifyFormTeacher.html
+++ b/src/main/resources/Templates/Teacher/modifyFormTeacher.html
@@ -33,7 +33,7 @@
     </div>
     <div>
         <a class="btn btn-primary" th:href="@{/event/backHomepage}">Return HomePage</a>
-        <a class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher List Manage</a>
+        <a sec:authorize="hasAnyRole('ADMIN', 'MANAGER')" class="btn btn-primary" th:href="@{/m-teacher/showManageTeacher}">Teacher List Manage</a>
     </div>
 </div>
 </body>
