--- a/src/main/resources/Templates/home.html
+++ b/src/main/resources/Templates/home.html
@@ -70,7 +70,7 @@
                 <span sec:authentication="principal.authorities"></span>
             </a>
             <ul class="dropdown-menu text-small shadow">
-                <li><a class="dropdown-item" href="#">New project...</a></li>
+                <li><a class="dropdown-item" th:href="@{/changePassword(user=${T(vutran.my_first_project_spring_boot.management_student.Util.EncodeUtils).encodeString(#authentication.principal.username)})}">Change Password</a></li>
                 <li><a class="dropdown-item" href="#">Settings</a></li>
                 <li><a class="dropdown-item" href="#">Profile</a></li>
                 <li>
